# lazarus

./: .gitignore  README.md  pyproject.toml  start_webui.bat  test_server.py
config/: sample_configuration.json
src/: __init__.py
src/analysis/: __init__.py  parser.py  report.py
src/cli/: main.py
src/codegen/: __init__.py
src/codegen/mod/: __init__.py  generator.py
src/ghidra_automation/: __init__.py  runner.py
src/ghidra_automation/scripts/: network_patterns_json.py  payload_hints_json.py  request_response_json.py
src/lazarus/analysis/: report.py
src/lazarus/cli/: main.py
src/lazarus/codegen/backend/: __init__.py  generator.py
src/lazarus/ghidra_automation/: runner.py
src/lazarus/ghidra_automation/scripts/: network_patterns_json.py  struct_hints_json.py
src/lazarus/injector/: __init__.py  win32.py
src/lazarus/webui/: __init__.py
src/lazarus/webui/backend/: server.py
src/lazarus/webui/frontend/: index.html
src/replay/: __init__.py  runner.py
src/webui/backend/: __init__.py
src/webui/frontend/: __init__.py
